increased common header size

--- a/web/app/themes/ppj/src/sass/utilities/_common-header.sass
+++ b/web/app/themes/ppj/src/sass/utilities/_common-header.sass
@@ -1,6 +1,6 @@
 .common-header
   @include u-top-border('large', 'dark')
-  font-size: $font-size-medium
+  font-size: $font-size-large
   font-weight: $font-weight-bold
   margin-bottom: .5em
 
