styled footer element

--- a/web/app/themes/ppj/src/sass/components/footer.sass
+++ b/web/app/themes/ppj/src/sass/components/footer.sass
@@ -2,6 +2,7 @@
   background-color: $color-dark
   color: $color-white
   font-size: $font-size-small
+  margin-top: auto
 
   &__container
     padding: $main-mobile-spacing
@@ -10,8 +11,10 @@
     margin-bottom: $main-mobile-spacing
     text-decoration: underline
 
+    & > a
+      color: $color-white
+
   &__copyright
     margin-top: $main-mobile-spacing * 2
-
-  & *
     color: $color-white
+
