--- a/web/app/themes/ppj/src/sass/main.sass
+++ b/web/app/themes/ppj/src/sass/main.sass
@@ -122,6 +122,8 @@ hr
 // -- COMPONENTS ------------------------------------------
 
 .page-container
+  display: flex
+  flex-direction: column
   min-height: 100vh
   position: relative
   width: 100%
