--- a/web/app/themes/ppj/src/sass/components/video-player.sass
+++ b/web/app/themes/ppj/src/sass/components/video-player.sass
@@ -1,24 +1,26 @@
 .video-player
-  align-items: center
-  background: $color-dark
-  bottom: 0
-  display: flex
-  height: 100%
-  left: 0
-  right: 0
-  justify-content: center
-  position: absolute
-  top: 0
+  position: relative
 
-  & > *
-    height: 100%
-    width: 100%
+  &__title
+    font-family: $sans-serif-strong
 
-  &__container
+  &__video-container
+    align-items: center
+    background: $color-dark
+    display: flex
     height: 0
-    margin: $main-mobile-spacing 0
+    justify-content: center
     padding-bottom: 56.25%
     position: relative
+
+    & > iframe
+      bottom: 0
+      height: 100%
+      left: 0
+      right: 0
+      position: absolute
+      top: 0
+      width: 100%
 
   &__play-button
     &:before
@@ -39,3 +41,8 @@
       border-color: $color-main
       color: $color-main
       transition: all .2s
+
+  &--wistia
+    .video-player
+      &__video-container
+        padding-bottom: 55%
