added navigation page block

--- a/web/app/themes/ppj/src/sass/main.sass
+++ b/web/app/themes/ppj/src/sass/main.sass
@@ -136,6 +136,7 @@ hr
 @import 'components/job-summary'
 @import 'components/ordered-list'
 @import 'components/organization-summary'
+@import 'components/nav-block'
 @import 'components/quote'
 @import 'components/role-intro'
 @import 'components/search'
