--- a/web/app/themes/ppj/src/sass/variables.sass
+++ b/web/app/themes/ppj/src/sass/variables.sass
@@ -29,6 +29,7 @@ $color-dark: rgb(0,0,0)
 $color-dark-transparent: rgba(0,0,0,0.85)
 $color-white: #fff
 $color-transparent: rgba(0,0,0,0)
+$color-nav-block: rgb(208, 234, 242)
 
 // layout
 $main-mobile-spacing: 1.6rem
