added image block

--- a/web/app/themes/ppj/src/sass/main.sass
+++ b/web/app/themes/ppj/src/sass/main.sass
@@ -144,6 +144,7 @@ hr
 @import 'components/text-and-image'
 @import 'components/text-block'
 @import 'components/video-player'
+@import 'components/image-block'
 
 .banner-image
   @extend .u-wireframe-image
