changed height of header on non home pages

--- a/web/app/themes/ppj/src/sass/components/header.sass
+++ b/web/app/themes/ppj/src/sass/components/header.sass
@@ -1,7 +1,10 @@
 .header
   border-bottom: .4rem solid $color-very-light
   box-sizing: content-box
-  height: 24rem
+  height: 18rem
+
+  .home &
+    height: 24rem
 
   &__hero
     height: 100%
