changed margin size for l-full

--- a/web/app/themes/ppj/src/sass/layout.sass
+++ b/web/app/themes/ppj/src/sass/layout.sass
@@ -1,7 +1,7 @@
 .l-full
   @extend .u-clearfix
   opacity: 0
-  margin: $main-mobile-spacing 0
+  margin: $main-mobile-spacing * 1.5 0
   transition: opacity 1s
   width: 100%
 
