styled nav menu button

--- a/web/app/themes/ppj/src/sass/components/header.sass
+++ b/web/app/themes/ppj/src/sass/components/header.sass
@@ -100,8 +100,12 @@
   // https://jonsuh.com/hamburgers/
   // https://www.w3schools.com/howto/howto_css_menu_icon.asp
   &__nav-link
+    background-color: $color-main
+    border: solid .2rem $color-white
+    border-radius: $main-mobile-spacing * 2
     color: $color-white
     cursor: pointer
+    padding: .45em .7em .3em
     pointer-events: auto
     position: absolute
     right: $main-mobile-spacing
