using new barlow font

--- a/web/app/themes/ppj/src/sass/components/header.sass
+++ b/web/app/themes/ppj/src/sass/components/header.sass
@@ -194,7 +194,7 @@
   &__text
     @include u-top-border('large', 'light')
     color: $color-white
-    font-family: $sans-serif-strong
+    font-weight: $font-weight-bold
     font-size: $font-size-huge
     font-weight: bold
     line-height: 1.3em
