--- a/web/app/themes/ppj/src/sass/components/job-summary.sass
+++ b/web/app/themes/ppj/src/sass/components/job-summary.sass
@@ -15,7 +15,7 @@
       color: #cccccc
 
   &__position
-    font-family: $sans-serif-strong
+    font-weight: $font-weight-bold
 
   &__salary
     font-weight: $font-weight-bold
