--- a/web/app/themes/ppj/src/sass/components/nav-block.sass
+++ b/web/app/themes/ppj/src/sass/components/nav-block.sass
@@ -5,7 +5,7 @@
   border-top-right-radius: $main-mobile-spacing
 
   &__title
-    font-family: $sans-serif-strong
+    font-weight: $font-weight-bold
     margin-bottom: $main-mobile-spacing
 
   &__link
