--- a/web/app/themes/ppj/src/sass/components/organization-summary.sass
+++ b/web/app/themes/ppj/src/sass/components/organization-summary.sass
@@ -2,7 +2,7 @@
   margin: $main-mobile-spacing 0
 
   &__name
-    font-family: $sans-serif-strong
+    font-weight: $font-weight-bold
 
   &__link-url
     display: block
