--- a/web/app/themes/ppj/src/sass/main.sass
+++ b/web/app/themes/ppj/src/sass/main.sass
@@ -37,7 +37,7 @@ html
   font-family: $sans-serif
 
 h1,h2,h3,h4,h5,h6,strong
-  font-family: $sans-serif-strong
+  font-weight: $font-weight-bold
 
 html
   font-size: 62.5% // 1 rem now equals 10px
@@ -93,7 +93,7 @@ a[href=""]
 
 .enormous
   color: $color-secondary
-  font-family: $sans-serif-strong
+  font-weight: $font-weight-bold
   font-size: $font-size-enormous
   line-height: 1
   padding-top: .1em
