--- a/web/app/themes/ppj/src/sass/variables.sass
+++ b/web/app/themes/ppj/src/sass/variables.sass
@@ -2,8 +2,7 @@
    background-image: url('/app/themes/ppj/dest/img/#{$path}')
 
 // fonts
-$sans-serif:  "GDSTransportWebsite", Helvetica, Verdana, sans-serif
-$sans-serif-strong:  "GDSTransportWebsite-Bold", Helvetica, Verdana, sans-serif
+$sans-serif: 'Barlow', sans-serif
 $serif: Merriweather, Georgia, 'Times New Roman', serif
 $mono: 'Source Code Pro', Courier, mono
 
