--- a/web/app/themes/ppj/src/sass/components/call-to-action.sass
+++ b/web/app/themes/ppj/src/sass/components/call-to-action.sass
@@ -32,7 +32,7 @@
       color: $color-white
       cursor: pointer
       display: block
-      font-family: $sans-serif-strong
+      font-weight: $font-weight-bold
       line-height: 2.2rem
       padding: 1rem 2rem
       position: relative
