--- a/web/app/themes/ppj/src/sass/components/ordered-list.sass
+++ b/web/app/themes/ppj/src/sass/components/ordered-list.sass
@@ -53,6 +53,6 @@
       display: none
 
   &__list-element-main-text
-    font-family: $sans-serif-strong
+    font-weight: $font-weight-bold
     font-size: $font-size-tiny
     padding-top: .8rem
