--- a/web/app/themes/ppj/src/sass/components/tabs.sass
+++ b/web/app/themes/ppj/src/sass/components/tabs.sass
@@ -13,7 +13,7 @@
       color: $color-white
       cursor: pointer
       //flex: 1 1 auto
-      font-family: $sans-serif-strong
+      font-weight: $font-weight-bold
       margin: $main-mobile-spacing/4 $main-mobile-spacing/2
       padding: $main-mobile-spacing*3/4 $main-mobile-spacing*7/8 $main-mobile-spacing/2 $main-mobile-spacing*3/4
       text-align: center
