--- a/web/app/themes/ppj/src/sass/components/text-block.sass
+++ b/web/app/themes/ppj/src/sass/components/text-block.sass
@@ -44,7 +44,7 @@
       margin-right: $main-mobile-spacing * 2
 
     th
-      font-family: $sans-serif-strong
+      font-weight: $font-weight-bold
       line-height: 1.3
       padding: $main-mobile-spacing/2
       text-align: left
@@ -67,7 +67,7 @@
     border-top-right-radius: $main-mobile-spacing * 2
     border-bottom-right-radius: $main-mobile-spacing * 2
     color: $color-white
-    font-family: $sans-serif-strong
+    font-weight: $font-weight-bold
     font-size: $font-size-large
     padding: $main-mobile-spacing * 2 $main-mobile-spacing $main-mobile-spacing*1.5
 
