--- a/web/app/themes/ppj/src/sass/components/video-player.sass
+++ b/web/app/themes/ppj/src/sass/components/video-player.sass
@@ -2,7 +2,7 @@
   position: relative
 
   &__title
-    font-family: $sans-serif-strong
+    font-weight: $font-weight-bold
 
   &__video-container
     align-items: center
