--- a/web/app/themes/ppj/src/sass/main.sass
+++ b/web/app/themes/ppj/src/sass/main.sass
@@ -21,6 +21,7 @@ hr
 
 *
   box-sizing: border-box
+  font-weight: $font-weight-light
 
 a,
 html
@@ -55,6 +56,9 @@ h3
 h1,h2,h3,h4,h5,h6,
 strong
   font-weight: $font-weight-bold
+
+div
+  line-height: 1.3
 
 *
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0)
