--- a/web/app/themes/ppj/src/sass/components/ordered-list.sass
+++ b/web/app/themes/ppj/src/sass/components/ordered-list.sass
@@ -35,7 +35,7 @@
       justify-content: center
       left: -3.1rem
       line-height: 2.49rem
-      padding: .3rem .1rem 0 0
+      padding: 0 .1rem 0 0
       position: absolute
       width: 3rem
 
