--- a/web/app/themes/ppj/src/sass/components/text-block.sass
+++ b/web/app/themes/ppj/src/sass/components/text-block.sass
@@ -48,10 +48,12 @@
       line-height: 1.3
       padding: $main-mobile-spacing/2
       text-align: left
+      vertical-align: middle
 
     td
       padding: $main-mobile-spacing/2
       text-align: left
+      vertical-align: middle
 
     tr
       border-bottom: 1px solid $color-light
