replaced logo png with a svg

--- a/web/app/themes/ppj/src/sass/components/header.sass
+++ b/web/app/themes/ppj/src/sass/components/header.sass
@@ -172,7 +172,7 @@
 
   &__logo
     @extend .u-wireframe-image
-    @include background-img('HMPPS_WHITE_AW.png')
+    @include background-img('svg/hmpps_logo.svg')
     background-color: $color-transparent
     background-repeat: no-repeat
     background-position: center center
