updated font weights according to the design

--- a/web/app/themes/ppj/src/sass/components/text-block.sass
+++ b/web/app/themes/ppj/src/sass/components/text-block.sass
@@ -79,6 +79,7 @@
     padding: $main-mobile-spacing * 2 $main-mobile-spacing $main-mobile-spacing*1.5
 
   &__quote-content
+    font-weight: $font-weight-bold
     line-height: 1.3em
 
   &__quote-mark:before
@@ -106,7 +107,7 @@
     border-radius: $main-mobile-spacing * 2
     color: $color-white
     display: block
-    font-weight: bold
+    font-weight: $font-weight-bold
     margin: $main-mobile-spacing 0 0
     padding: $main-mobile-spacing *.8
     text-align: center
