--- a/web/app/themes/ppj/src/sass/main.sass
+++ b/web/app/themes/ppj/src/sass/main.sass
@@ -38,7 +38,7 @@ html
   font-family: $sans-serif
 
 h1,h2,h3,h4,h5,h6,strong
-  font-weight: $font-weight-bold
+  font-weight: $font-weight-semi-bold
 
 html
   font-size: 62.5% // 1 rem now equals 10px
@@ -56,6 +56,9 @@ h3
 h1,h2,h3,h4,h5,h6,
 strong
   font-weight: $font-weight-bold
+
+div, p
+  font-weight: $font-weight-light
 
 div
   line-height: 1.3
