image block and text block can now be configured to be full or half width;
also temporarily making 'large' breakpoint 1200px instead of 1440px
to make it easier to develop using Chrome developer tools on a screen that's only 1920px wide

--- a/web/app/themes/ppj/src/sass/layout.sass
+++ b/web/app/themes/ppj/src/sass/layout.sass
@@ -1,9 +1,17 @@
 .l-full
   @extend .u-clearfix
+  clear: both
   opacity: 0
   margin: $main-mobile-spacing * 1.5 0
+  position: relative
   transition: opacity 1s
   width: 100%
+
+  @include bp('large')
+    margin-left: auto
+    margin-right: auto
+    //width: 144rem
+    width: 120rem
 
 .l-half
   margin: $main-mobile-spacing 0
