added new font sizes from the design

--- a/web/app/themes/ppj/src/sass/variables.sass
+++ b/web/app/themes/ppj/src/sass/variables.sass
@@ -14,9 +14,16 @@ $font-weight-bold: 600
 $font-size-tiny: 1.1rem
 $font-size-small: 1.6rem
 $font-size-medium: 1.8rem
+$font-size-large-medium: 2rem
 $font-size-large: 2.2rem
-$font-size-huge: 2.6rem
+$font-size-very-large: 2.6rem
+$font-size-really-very-large: 2.8rem
+$font-size-quite-huge: 3.2rem
+$font-size-fairly-huge: 3.4rem
+$font-size-huge: 4.2rem
+$font-size-really-huge: 4.5rem
 $font-size-enormous: 4.8rem
+$font-size-gigantic: 5.6rem
 
 // colors
 $color-main: rgb(0,90,120)
