added new colors according to design

--- a/web/app/themes/ppj/src/sass/variables.sass
+++ b/web/app/themes/ppj/src/sass/variables.sass
@@ -26,12 +26,14 @@ $font-size-enormous: 4.8rem
 $font-size-gigantic: 5.6rem
 
 // colors
-$color-main: rgb(0,90,120)
-$color-secondary: rgb(20,152,197)
+$color-main: rgb(30,147,189)
+$color-secondary: rgb(30,147,189)
+$color-tertiary: rgb(113,11,105)
 $color-very-light: rgb(229,229,232)
 $color-light: rgb(204,204,204)
 $color-medium: rgb(240,240,240)
-$color-dark: rgb(0,0,0)
+$color-grey-medium: rgb(102,102,119)
+$color-dark: rgb(0,1,29)
 $color-dark-transparent: rgba(0,0,0,0.85)
 $color-white: #fff
 $color-transparent: rgba(0,0,0,0)
