--- a/web/app/themes/ppj/src/sass/main.sass
+++ b/web/app/themes/ppj/src/sass/main.sass
@@ -48,7 +48,7 @@ body
   -webkit-text-size-adjust: none
 
 h2
-  font-size: $font-size-huge
+  font-size: $font-size-very-large
 
 h3
   font-size: $font-size-medium
