.enormous items in content are now the tertiary color (purple)

--- a/web/app/themes/ppj/src/sass/main.sass
+++ b/web/app/themes/ppj/src/sass/main.sass
@@ -99,7 +99,7 @@ a[href=""]
   font-size: $font-size-large
 
 .enormous
-  color: $color-secondary
+  color: $color-tertiary
   font-weight: $font-weight-bold
   font-size: $font-size-enormous
   line-height: 1
