made role intro content text smaller

--- a/web/app/themes/ppj/src/sass/components/role-intro.sass
+++ b/web/app/themes/ppj/src/sass/components/role-intro.sass
@@ -28,7 +28,7 @@
 
   &__content
     border-bottom: .2rem solid $color-dark
-    font-size: $font-size-huge
+    font-size: $font-size-very-large
     font-weight: $font-weight-bold
     line-height: 1.2
     margin-top: $main-mobile-spacing/2
