added top margin to text block

--- a/web/app/themes/ppj/src/sass/components/text-block.sass
+++ b/web/app/themes/ppj/src/sass/components/text-block.sass
@@ -1,6 +1,6 @@
 .text-block
   font-size: $font-size-small
-  margin: 0 $main-mobile-spacing
+  margin: $main-mobile-spacing $main-mobile-spacing 0
 
   @include bp('portrait')
     font-size: $font-size-medium
