changed top padding for common title top border

--- a/web/app/themes/ppj/src/sass/utilities/_top-border.sass
+++ b/web/app/themes/ppj/src/sass/utilities/_top-border.sass
@@ -1,6 +1,6 @@
 
 @mixin u-top-border($size: 'large', $style: 'dark')
-  padding-top: $main-mobile-spacing * 3/4
+  padding-top: .5em
   position: relative
 
   &:before
