changed style of tab text on search page
center aligned text;
made text bigger;
reduced gap between tab items;

--- a/web/app/themes/ppj/src/sass/components/search.sass
+++ b/web/app/themes/ppj/src/sass/components/search.sass
@@ -62,10 +62,12 @@
     border: .1rem solid $color-dark
     border-radius: 0
     flex: 1
+    font-size: $font-size-medium
     font-weight: $font-weight-bold
-    margin-left: $main-mobile-spacing/2
+    margin-left: .2rem
     padding: $main-mobile-spacing/2
-    text-align: left
+    text-align: center
+    text-transform: uppercase
     width: 49%
 
     &:first-child
