--- a/web/app/themes/ppj/src/sass/components/accordion.sass
+++ b/web/app/themes/ppj/src/sass/components/accordion.sass
@@ -18,6 +18,7 @@
       border-top: $border
 
     &-header
+      align-items: center
       border-bottom: $border
       display: flex
       justify-content: space-between
@@ -56,14 +57,15 @@
         text-decoration: underline
 
     &-button
-      $size: 1.8rem
-      height: $size
-      width: $size
+      $length: 1.8rem
+      $thickness: $length/4
+      height: $length
+      width: $length
 
       &-container
         display: flex
-        height: $size
-        width: $size
+        height: $length
+        width: $length
 
       //color: $color-main // https://stackoverflow.com/questions/32413731/color-for-unicode-emoji/39776303#39776303
       color: transparent
@@ -78,6 +80,19 @@
       transform: rotate(0deg)
       transition: all $main-transition-duration
 
+      &-bar
+        background-color: $color-main
+        height: $thickness
+        width: $length
+        position: absolute
+        top: $length/2 - $thickness/2
+        transition: opacity $main-transition-duration
+
+        &--horizontal
+
+        &--vertical
+          transform: rotate(90deg)
+
     &--open
       border-bottom: $border
 
@@ -89,11 +104,11 @@
             margin: $main-mobile-spacing/2 0
 
           &-button
-            transform: rotate(90deg)
+            //transform: rotate(90deg)
 
           &-button
-            & > div
-              &:first-child
+            &-bar
+              &--vertical
                 opacity: 0
 
   &--numbered
