gave html and body elements a dark background and .page-container a white background

--- a/web/app/themes/ppj/src/sass/main.sass
+++ b/web/app/themes/ppj/src/sass/main.sass
@@ -12,7 +12,10 @@
 button
   background: none
 
-html
+body, html
+  background-color: $color-dark
+
+.page-container
   background-color: $color-white
 
 button,
