styled menu button
now bold;
button wider for tablet portrait

--- a/web/app/themes/ppj/src/sass/components/header.sass
+++ b/web/app/themes/ppj/src/sass/components/header.sass
@@ -116,9 +116,14 @@
     border-radius: $main-mobile-spacing * 2
     color: $color-white
     cursor: pointer
+    font-weight: $font-weight-bold
     height: 3.6rem
     padding: .3em .7em .3em
     pointer-events: auto
+    text-align: center
+
+    @include bp('portrait')
+      width: 11.3rem
 
     & > div
       background: $color-white
