created a portrait style for text blocks images
To use, a user must wrap an image in a p tag with class portrait.
example on The Role page under My story: from trainee to governor in 12 years

--- a/web/app/themes/ppj/src/sass/components/text-block.sass
+++ b/web/app/themes/ppj/src/sass/components/text-block.sass
@@ -78,6 +78,21 @@
       & > th
         width: 33%
 
+    p.portrait
+      text-align: center
+      width: 100%
+
+      & > img
+        border-radius: 50%
+        border: solid .5rem $color-main
+        margin: auto
+        padding: .2rem
+        width: 50%
+
+        @include bp('portrait')
+          width: 20rem
+
+
   &__quote
     background-color: $color-tertiary
     border-bottom-left-radius: $main-mobile-spacing * 2
