added font-weight 700 for .enormous elements

--- a/web/app/themes/ppj/src/sass/main.sass
+++ b/web/app/themes/ppj/src/sass/main.sass
@@ -103,7 +103,7 @@ a[href=""]
 
 .enormous
   color: $color-tertiary
-  font-weight: $font-weight-bold
+  font-weight: $font-weight-very-bold
   font-size: $font-size-enormous
   line-height: 1
   padding-top: .1em
