--- a/web/app/themes/ppj/src/sass/variables.sass
+++ b/web/app/themes/ppj/src/sass/variables.sass
@@ -10,6 +10,7 @@ $font-weight-light: 300
 $font-weight-normal: 400
 $font-weight-semi-bold: 500
 $font-weight-bold: 600
+$font-weight-very-bold: 700
 
 $font-size-tiny: 1.1rem
 $font-size-small: 1.6rem
