--- a/web/app/themes/ppj/src/sass/components/text-block.sass
+++ b/web/app/themes/ppj/src/sass/components/text-block.sass
@@ -22,7 +22,7 @@
     & > h4
       font-weight: $font-weight-bold
       font-size: $font-size-small
-      margin: $main-mobile-spacing 0 $main-mobile-spacing/2 0
+      margin: 1.8rem 0
 
     & li
       font-size: $font-size-small
