--- a/web/app/themes/ppj/src/sass/utilities/_top-border.sass
+++ b/web/app/themes/ppj/src/sass/utilities/_top-border.sass
@@ -11,7 +11,7 @@
     display: block
     height: .2rem
     position: relative
-    top: -.1em
+    margin: inherit
     width: 2.5em
 
     @include bp('portrait')
