--- a/web/app/themes/ppj/src/sass/variables.sass
+++ b/web/app/themes/ppj/src/sass/variables.sass
@@ -30,6 +30,7 @@ $font-size-gigantic: 5.6rem
 $color-main: rgb(30,147,189)
 $color-secondary: rgb(30,147,189)
 $color-tertiary: rgb(113,11,105)
+$color-extremely-light: rgb(240,240,240)
 $color-very-light: rgb(229,229,232)
 $color-light: rgb(204,204,204)
 $color-medium: rgb(240,240,240)
