styled 'light' headers
removed green background used for testing;
made nav link background light;
made nav link border light grey;

--- a/web/app/themes/ppj/src/sass/components/header.sass
+++ b/web/app/themes/ppj/src/sass/components/header.sass
@@ -16,7 +16,6 @@
   &__hero
     height: 100%
     position: relative
-    background: green
 
   &__overlay
     display: flex
@@ -262,6 +261,8 @@
         color: $color-dark
 
       &__nav-link
+        background-color: inherit
+        border-color: $color-light
         color: $color-dark
 
         & > div
