added 'mi.' suffix to search result distances

--- a/web/app/themes/ppj/src/sass/components/job-summary.sass
+++ b/web/app/themes/ppj/src/sass/components/job-summary.sass
@@ -8,8 +8,8 @@
   &__distance
     font-weight: $font-weight-bold
 
-    &-miles
-      content: ' miles'
+    &-miles:after
+      content: ' mi.'
 
     &-time
       color: #cccccc
