reduced margin of l-full

--- a/web/app/themes/ppj/src/sass/layout.sass
+++ b/web/app/themes/ppj/src/sass/layout.sass
@@ -2,7 +2,7 @@
   @extend .u-clearfix
   clear: both
   opacity: 0
-  margin: $main-mobile-spacing * 1.5 0
+  margin: $main-mobile-spacing 0
   position: relative
   transition: opacity 1s
   width: 100%
