--- a/web/app/themes/ppj/src/sass/components/call-to-action.sass
+++ b/web/app/themes/ppj/src/sass/components/call-to-action.sass
@@ -1,6 +1,6 @@
 .call-to-action
   background: $color-main
-  padding: $main-mobile-spacing
+  padding: $common-spacing
 
   @include bp('portrait')
     margin: auto
@@ -45,7 +45,7 @@
 
   &--tight
     background-color: $color-white
-    padding: 0 $main-mobile-spacing
+    padding: 0 $common-spacing
 
     .call-to-action
 
@@ -53,7 +53,7 @@
         $size: .2rem
         background-color: $color-white
         border: $size solid $color-dark
-        margin: $main-mobile-spacing/2 0
+        margin: $common-spacing/2 0
         position: relative
         top: -$size
 
