--- a/web/app/themes/ppj/src/sass/components/contact.sass
+++ b/web/app/themes/ppj/src/sass/components/contact.sass
@@ -1,5 +1,5 @@
 .contact
-  margin: 0 $main-mobile-spacing
+  margin: 0 $common-spacing
 
   &__title
     @extend .common-header
@@ -8,12 +8,12 @@
     &-element
       border: .2rem solid $color-dark
       display: block
-      margin: $main-mobile-spacing/2 0
+      margin: $common-spacing/2 0
 
       &-link
         display: block
         font-weight: bold
-        padding: $main-mobile-spacing/2
+        padding: $common-spacing/2
         text-align: center
         // TODO - remove:
         pointer-events: none
