--- a/web/app/themes/ppj/src/sass/components/footer.sass
+++ b/web/app/themes/ppj/src/sass/components/footer.sass
@@ -4,16 +4,16 @@
   font-size: $font-size-small
 
   &__container
-    padding: $main-mobile-spacing
+    padding: $common-spacing
 
   &__nav-link
-    margin-bottom: $main-mobile-spacing
+    margin-bottom: $common-spacing
     text-decoration: underline
 
     & > a
       color: $color-white
 
   &__copyright
-    margin-top: $main-mobile-spacing * 2
+    margin-top: $common-spacing * 2
     color: $color-white
 
