--- a/web/app/themes/ppj/src/sass/components/image-block.sass
+++ b/web/app/themes/ppj/src/sass/components/image-block.sass
@@ -2,7 +2,7 @@
   height: 0
   padding-bottom: 56.25%
   position: relative
-  margin: 0 $main-mobile-spacing
+  margin: 0 $common-spacing
 
   &__image-container
     bottom: 0
