--- a/web/app/themes/ppj/src/sass/components/job-summary.sass
+++ b/web/app/themes/ppj/src/sass/components/job-summary.sass
@@ -2,7 +2,7 @@
   border-bottom: .1rem solid $color-light
   font-size: $font-size-small
   line-height: 1.2
-  padding: $main-mobile-spacing/2 0
+  padding: $common-spacing/2 0
   position: relative
 
   &__distance
@@ -21,10 +21,10 @@
     font-weight: $font-weight-bold
     position: absolute
     right: 0
-    top: $main-mobile-spacing/2
+    top: $common-spacing/2
 
   &__link
-    bottom: $main-mobile-spacing/2
+    bottom: $common-spacing/2
     position: absolute
     right: 0
     text-decoration: underline
