--- a/web/app/themes/ppj/src/sass/components/nav-block.sass
+++ b/web/app/themes/ppj/src/sass/components/nav-block.sass
@@ -1,15 +1,15 @@
 .nav-block
   background-color: $color-nav-block
-  margin: 0 $main-mobile-spacing
-  padding: $main-mobile-spacing
-  border-top-right-radius: $main-mobile-spacing
+  margin: 0 $common-spacing
+  padding: $common-spacing
+  border-top-right-radius: $common-spacing
 
   &__title
     font-weight: $font-weight-bold
-    margin-bottom: $main-mobile-spacing
+    margin-bottom: $common-spacing
 
   &__link
-    margin-bottom: $main-mobile-spacing
+    margin-bottom: $common-spacing
 
     & > a
       cursor: pointer
