--- a/web/app/themes/ppj/src/sass/components/organization-summary.sass
+++ b/web/app/themes/ppj/src/sass/components/organization-summary.sass
@@ -1,12 +1,12 @@
 .organization-summary
-  margin: $main-mobile-spacing 0
+  margin: $common-spacing 0
 
   &__name
     font-weight: $font-weight-bold
 
   &__link-url
     display: block
-    margin-top: $main-mobile-spacing
+    margin-top: $common-spacing
     text-decoration: underline
 
   &:first-child
