--- a/web/app/themes/ppj/src/sass/components/quote.sass
+++ b/web/app/themes/ppj/src/sass/components/quote.sass
@@ -2,7 +2,7 @@
   display: block
   font-size: $font-size-medium
   font-weight: $font-weight-bold
-  margin: $main-mobile-spacing
+  margin: $common-spacing
   quotes: "“" "”" "‘" "’"
 
   &:before
