--- a/web/app/themes/ppj/src/sass/main.sass
+++ b/web/app/themes/ppj/src/sass/main.sass
@@ -116,7 +116,7 @@ p a
 
 hr
   border-top: .1rem solid $color-light
-  margin: $main-mobile-spacing 0
+  margin: $common-spacing 0
 
 
 @import '../../node_modules/slick-carousel/slick/slick.css'
