--- a/web/app/themes/ppj/src/sass/utilities/_common-table.sass
+++ b/web/app/themes/ppj/src/sass/utilities/_common-table.sass
@@ -3,8 +3,8 @@
 
   & td
     border: none
-    padding: $main-mobile-spacing/2 0
-    padding-left: $main-mobile-spacing/2
+    padding: $common-spacing/2 0
+    padding-left: $common-spacing/2
 
     &:first-child
       padding-left: 0
