--- a/web/app/themes/ppj/src/sass/variables.sass
+++ b/web/app/themes/ppj/src/sass/variables.sass
@@ -42,7 +42,7 @@ $color-transparent: rgba(0,0,0,0)
 $color-nav-block: rgb(208, 234, 242)
 
 // layout
-$main-mobile-spacing: 1.6rem
+$common-spacing: 1.6rem
 
 // transitions
 $main-transition-duration: .5s
