--- a/web/app/themes/ppj/src/sass/components/ordered-list.sass
+++ b/web/app/themes/ppj/src/sass/components/ordered-list.sass
@@ -1,5 +1,5 @@
 .ordered-list
-  margin: 0 $main-mobile-spacing
+  margin: 0 $common-spacing
 
   &__title
     @extend .common-header
@@ -11,13 +11,13 @@
   &__list
     counter-reset: li
     list-style: decimal
-    margin-top: $main-mobile-spacing
+    margin-top: $common-spacing
 
   &__list-element
     font-size: $font-size-tiny
     height: 4.6rem
     list-style: none
-    margin-left: $main-mobile-spacing*2
+    margin-left: $common-spacing*2
     padding-left: 1rem
     position: relative
 
