--- a/web/app/themes/ppj/src/sass/components/role-intro.sass
+++ b/web/app/themes/ppj/src/sass/components/role-intro.sass
@@ -1,5 +1,5 @@
 .role-intro
-  margin: $main-mobile-spacing $main-mobile-spacing
+  margin: $common-spacing $common-spacing
   position: relative
 
   &__main-section
@@ -17,13 +17,13 @@
   &__subtitle
     font-size: $font-size-small
     font-weight: $font-weight-bold
-    margin-bottom: $main-mobile-spacing/2
+    margin-bottom: $common-spacing/2
 
   &__position-block
     border-left: .2rem solid $color-light
     float: right
     font-size: $font-size-tiny
-    padding-left: $main-mobile-spacing/2
+    padding-left: $common-spacing/2
     width: 40%
 
   &__content
@@ -31,5 +31,5 @@
     font-size: $font-size-very-large
     font-weight: $font-weight-bold
     line-height: 1.2
-    margin-top: $main-mobile-spacing/2
-    padding-bottom: $main-mobile-spacing/2
+    margin-top: $common-spacing/2
+    padding-bottom: $common-spacing/2
