--- a/web/app/themes/ppj/src/sass/components/search.sass
+++ b/web/app/themes/ppj/src/sass/components/search.sass
@@ -1,5 +1,5 @@
 .search
-  margin: 0 $main-mobile-spacing
+  margin: 0 $common-spacing
 
   &__title
     @extend .common-header
@@ -13,8 +13,8 @@
     display: block
     font-weight: $font-weight-bold
     height: 4rem
-    margin: $main-mobile-spacing/2 0
-    padding: $main-mobile-spacing/2
+    margin: $common-spacing/2 0
+    padding: $common-spacing/2
     width: 94%
 
   &__button-search
@@ -65,7 +65,7 @@
     font-size: $font-size-medium
     font-weight: $font-weight-bold
     margin-left: .2rem
-    padding: $main-mobile-spacing/2
+    padding: $common-spacing/2
     text-align: center
     text-transform: uppercase
     width: 49%
@@ -84,7 +84,7 @@
       transition: all .2s
 
   &__view-container
-    margin: $main-mobile-spacing/2 0
+    margin: $common-spacing/2 0
 
   &__map
     display: flex
@@ -119,7 +119,7 @@
     border-bottom: .1rem solid $color-light
     font-size: $font-size-small
     line-height: 1.2
-    padding: $main-mobile-spacing/2 0
+    padding: $common-spacing/2 0
     position: relative
 
     &-distance
@@ -132,12 +132,12 @@
       font-weight: $font-weight-bold
       position: absolute
       right: 0
-      top: $main-mobile-spacing/2
+      top: $common-spacing/2
 
     &-prison
 
     &-link
-      bottom: $main-mobile-spacing/2
+      bottom: $common-spacing/2
       position: absolute
       right: 0
       text-decoration: underline
@@ -149,7 +149,7 @@
   &__pagination
     display: flex
     justify-content: space-between
-    margin: $main-mobile-spacing/2 0
+    margin: $common-spacing/2 0
 
     &-direction, &-link
       border-width: .2rem
