--- a/web/app/themes/ppj/src/sass/components/tabs.sass
+++ b/web/app/themes/ppj/src/sass/components/tabs.sass
@@ -1,12 +1,12 @@
 .tabs
-  margin: 0 0 $main-mobile-spacing
+  margin: 0 0 $common-spacing
 
   &__nav
     display: flex
     flex-wrap: wrap
     justify-content: flex-start
-    padding: 0 $main-mobile-spacing/2
-    margin-bottom: $main-mobile-spacing
+    padding: 0 $common-spacing/2
+    margin-bottom: $common-spacing
 
     &-link
       background-color: $color-dark
@@ -14,8 +14,8 @@
       cursor: pointer
       //flex: 1 1 auto
       font-weight: $font-weight-bold
-      margin: $main-mobile-spacing/4 $main-mobile-spacing/2
-      padding: $main-mobile-spacing*3/4 $main-mobile-spacing*7/8 $main-mobile-spacing/2 $main-mobile-spacing*3/4
+      margin: $common-spacing/4 $common-spacing/2
+      padding: $common-spacing*3/4 $common-spacing*7/8 $common-spacing/2 $common-spacing*3/4
       text-align: center
 
       &:first-child
