--- a/web/app/themes/ppj/src/sass/components/text-and-image.sass
+++ b/web/app/themes/ppj/src/sass/components/text-and-image.sass
@@ -1,7 +1,7 @@
 .text-and-image
   $c: &
   @extend .u-clearfix
-  margin: 0 $main-mobile-spacing
+  margin: 0 $common-spacing
   position: relative
 
   &__wrapper
@@ -15,7 +15,7 @@
 
   &__text-container
     @extend .u-clearfix
-    padding-right: $main-mobile-spacing
+    padding-right: $common-spacing
     width: 50%
 
   &__image-container
@@ -46,19 +46,19 @@
   &__subtitle
     font-weight: $font-weight-bold
     font-size: $font-size-small
-    margin-bottom: $main-mobile-spacing/2
+    margin-bottom: $common-spacing/2
 
   &__text
     clear: left
     float: left
     font-size: $font-size-small
-    padding-right: $main-mobile-spacing
-    padding-bottom: $main-mobile-spacing/2
+    padding-right: $common-spacing
+    padding-bottom: $common-spacing/2
 
   &__quote-container
     font-size: $font-size-tiny
     font-weight: $font-weight-bold
-    margin-bottom: $main-mobile-spacing/2
+    margin-bottom: $common-spacing/2
     position: relative
 
   &__quote-mark:before
@@ -80,7 +80,7 @@
 
   &__content
     font-size: $font-size-tiny
-    margin-top: $main-mobile-spacing/2
+    margin-top: $common-spacing/2
 
   &--inlaid-text
     $shade: rgba(0,0,0,.6)
@@ -94,7 +94,7 @@
     #{$c}__text-container
       background-color: $shade
       box-shadow: 0 0 3rem 3rem $shade
-      padding: $main-mobile-spacing
+      padding: $common-spacing
       width: 80%
 
     #{$c}__title,
@@ -103,13 +103,13 @@
 
     #{$c}__title
       font-size: $font-size-large
-      margin: $main-mobile-spacing/2 0
+      margin: $common-spacing/2 0
 
     #{$c}__main-section
       background-color: $shade
       border: none
       box-shadow: 0 0 3rem 3rem $shade
-      padding: $main-mobile-spacing
+      padding: $common-spacing
       width: 80%
 
     #{$c}__image-container
