--- a/web/app/themes/ppj/src/sass/components/text-block.sass
+++ b/web/app/themes/ppj/src/sass/components/text-block.sass
@@ -1,6 +1,6 @@
 .text-block
   font-size: $font-size-small
-  margin: $main-mobile-spacing $main-mobile-spacing 0
+  margin: $common-spacing $common-spacing 0
 
   @include bp('portrait')
     font-size: $font-size-medium
@@ -29,9 +29,9 @@
 
     & li
       font-size: $font-size-small
-      margin: $main-mobile-spacing/2 0
-      margin-left: $main-mobile-spacing
-      padding-right: $main-mobile-spacing * 2
+      margin: $common-spacing/2 0
+      margin-left: $common-spacing
+      padding-right: $common-spacing * 2
 
     & ol li
       list-style-type: decimal
@@ -41,26 +41,26 @@
       margin-left: 2rem
 
     p
-      margin-bottom: $main-mobile-spacing
-      //margin-right: $main-mobile-spacing/2
-      //padding-right: $main-mobile-spacing
+      margin-bottom: $common-spacing
+      //margin-right: $common-spacing/2
+      //padding-right: $common-spacing
       line-height: 1.3em
 
     a
       text-decoration: underline
 
     hr
-      margin-right: $main-mobile-spacing * 2
+      margin-right: $common-spacing * 2
 
     th
       font-weight: $font-weight-bold
       line-height: 1.3
-      padding: $main-mobile-spacing/2
+      padding: $common-spacing/2
       text-align: left
       vertical-align: middle
 
     td
-      padding: $main-mobile-spacing/2
+      padding: $common-spacing/2
       text-align: left
       vertical-align: middle
 
@@ -71,7 +71,7 @@
         border-bottom: none
 
     table
-      margin: $main-mobile-spacing 0
+      margin: $common-spacing 0
       width: 100%
 
     table.three-columns
@@ -94,12 +94,13 @@
 
   &__quote
     background-color: $color-tertiary
-    border-bottom-left-radius: $main-mobile-spacing * 2
-    border-top-left-radius: $main-mobile-spacing * 2
-    border-top-right-radius: $main-mobile-spacing * 2
+    border-bottom-left-radius: $common-spacing * 2
+    border-top-left-radius: $common-spacing * 2
+    border-top-right-radius: $common-spacing * 2
     color: $color-white
     font-size: $font-size-large
-    padding: $main-mobile-spacing * 2 $main-mobile-spacing $main-mobile-spacing*1.5
+    padding: $common-spacing * 2 $common-spacing $common-spacing*1.5
+
 
   &__quote-content
     font-weight: $font-weight-bold
@@ -116,16 +117,20 @@
     color: $color-white
     font-family: $sans-serif
     font-size: $font-size-medium
-    margin-top: $main-mobile-spacing
+    margin-top: $common-spacing
+
+    @include bp('large')
+      font-size: $font-size-really-very-large
+
 
   @at-root a#{&}__link // https://stackoverflow.com/questions/17268051/sass-combining-parent-using-ampersand-with-base-element
     background-color: $color-main
-    border-radius: $main-mobile-spacing * 2
+    border-radius: $common-spacing * 2
     color: $color-white
     display: block
     font-weight: $font-weight-bold
-    margin: $main-mobile-spacing 0 0
-    padding: $main-mobile-spacing *.8
+    margin: $common-spacing 0 0
+    padding: $common-spacing *.8
     text-align: center
     text-decoration: none
     text-transform: uppercase
