--- a/web/app/themes/ppj/src/sass/layout.sass
+++ b/web/app/themes/ppj/src/sass/layout.sass
@@ -2,7 +2,7 @@
   @extend .u-clearfix
   clear: both
   opacity: 0
-  margin: $main-mobile-spacing 0
+  margin: $common-spacing 0
   position: relative
   transition: opacity 1s
   width: 100%
@@ -14,7 +14,7 @@
     width: 120rem
 
 .l-half
-  margin: $main-mobile-spacing 0
+  margin: $common-spacing 0
   opacity: 0
   width: 100%
 
