--- a/web/app/themes/ppj/src/sass/components/job-summary.sass
+++ b/web/app/themes/ppj/src/sass/components/job-summary.sass
@@ -28,6 +28,7 @@
     position: absolute
     right: 0
     text-decoration: underline
+    text-transform: capitalize
 
   &__prison-name > a
     text-decoration: underline
