Added triple text block component
In the homepage designs there are currently 2 sections where there are 3 similar components side by side.
The first section also includes icons and some associated text in addition to the normal text content.
This new component facilitates this.

--- a/web/app/themes/ppj/src/sass/main.sass
+++ b/web/app/themes/ppj/src/sass/main.sass
@@ -4,8 +4,8 @@
 @import '../css/reset.css'
 
 @import 'font-faces'
-@import 'variables'
 @import 'breakpoints'
+@import 'variables'
 @import 'layout'
 
 // base reset
@@ -151,6 +151,7 @@ hr
 @import 'components/tabs'
 @import 'components/text-and-image'
 @import 'components/text-block'
+@import 'components/triple-text-block'
 @import 'components/video-player'
 @import 'components/image-block'
 
