--- a/web/app/themes/ppj/src/sass/variables.sass
+++ b/web/app/themes/ppj/src/sass/variables.sass
@@ -21,6 +21,7 @@ $font-size-very-large: 2.6rem
 $font-size-really-very-large: 2.8rem
 $font-size-quite-huge: 3.2rem
 $font-size-fairly-huge: 3.4rem
+$font-size-almost-huge: 4rem
 $font-size-huge: 4.2rem
 $font-size-really-huge: 4.5rem
 $font-size-enormous: 4.8rem
