--- a/web/app/themes/ppj/src/sass/components/header.sass
+++ b/web/app/themes/ppj/src/sass/components/header.sass
@@ -21,19 +21,28 @@
     display: flex
     flex-direction: column
     height: 100%
-    justify-content: space-between
-    pointer-events: none
+    justify-content: flex-end
     position: absolute
     top: 0
     width: 100%
 
-  &__top-container
-    display: flex
-    justify-content: space-between
-    margin: 0 $common-spacing
+  &__site-header
+    background: linear-gradient(to bottom, rgba(0,0,0,0.7), $color-transparent)
+    box-sizing: border-box
+    z-index: 1
+
+    &-content
+      @extend .l-full
+      display: flex
+      justify-content: space-between
+      margin-bottom: 0
+      margin-top: 0
+      opacity: 1
+      padding: $common-spacing
 
   &__carousel-image
     height: 100%
+    position: relative
     width: 100%
 
   &__img-container
@@ -56,7 +65,9 @@
     .slick-slide
       & > div
         height: 100%
+
         & > img
+
 
     .slick-dots
       bottom: 25px
@@ -75,7 +86,7 @@
         $size: 1rem
         border: $size/5 solid $color-light
         border-radius: $size*4
-        color: $color-transparent // rgba(0,0,0,0)
+        color: $color-transparent
         display: block
         height: $size
         padding: 0
@@ -107,8 +118,6 @@
     &--active
       background-color: $color-light
 
-  // https://jonsuh.com/hamburgers/
-  // https://www.w3schools.com/howto/howto_css_menu_icon.asp
   &__nav-link
     background-color: $color-main
     border: solid .2rem $color-white
@@ -117,12 +126,16 @@
     cursor: pointer
     font-weight: $font-weight-bold
     height: 3.6rem
+    margin-left: auto
     padding: .3em .7em .3em
     pointer-events: auto
     text-align: center
 
     @include bp('portrait')
       width: 11.3rem
+
+    @include bp('landscape')
+      display: none
 
     & > div
       background: $color-white
@@ -138,6 +151,11 @@
     color: $color-white
     display: none
 
+    @include bp('landscape')
+      background-color: $color-transparent
+      display: block
+      margin-left: auto
+
   &__nav-menu-close-button
     border: .2rem solid $color-white
     border-radius: 2rem
@@ -148,6 +166,9 @@
     right: $common-spacing
     top: $common-spacing
     width: $common-spacing * 1.5
+
+    @include bp('landscape')
+      display: none
 
     &:before
       color: $color-white
@@ -161,9 +182,17 @@
   &__nav-menu-list
     margin-top: 8rem
 
+    @include bp('landscape')
+      display: flex
+      margin-top: $common-spacing
+
   &__nav-menu-list-element
     font-weight: $font-weight-bold
     padding: 0 $common-spacing
+
+    @include bp('landscape')
+      padding: 0
+      padding-left: $common-spacing
 
     & > a
       border-bottom: 1px solid $color-white
@@ -172,6 +201,10 @@
       padding: $common-spacing/1.5 0
       width: 100%
 
+      @include bp('landscape')
+        border: none
+        padding: 0
+
       &[href='']
         color: $color-light
         pointer-events: none
@@ -179,6 +212,9 @@
 
     &:first-child > a
       border-top: 1px solid $color-white
+
+      @include bp('landscape')
+        display: none
 
     &-subtext
       font-weight: $font-weight-normal
@@ -237,12 +273,18 @@
     .header
       &__nav-menu
         display: initial
-        position: absolute
+        position: fixed
         top: 0
         bottom: 0
         left: 0
         right: 0
-        z-index: 1
+        z-index: 10
+
+        .admin-bar &
+          top: 4.6rem
+
+          @include bp('portrait')
+            top: 3.2rem
 
   &--style-light
     height: auto
