--- a/web/app/themes/ppj/src/sass/layout.sass
+++ b/web/app/themes/ppj/src/sass/layout.sass
@@ -22,6 +22,14 @@
     float: left
     width: 50%
 
+.l-site-header
+  left: 0
+  opacity: 1
+  position: absolute
+  right: 0
+  z-index: 1
+
 .l-footer
   margin-bottom: 0
+  margin-top: $common-spacing * 2
 
